Add realm_id as PK and address other feedbacks